added the dark mode configuration for Related Blogs heading

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,11 @@ body {
     color: white;
 }
 
+#Dark .relatedBlogs{
+
+    color: white;
+}
+
 #Dark .postTitle:hover{
 
     text-decoration: underline;
