--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@ body {
 #Light .blogCard{
 
     background-color: #f5f5f5f5;
+    /* background-color: #2c2828; */
     padding: 20px 35px;
     border-radius: 10px;
     transition: all 0.3s ease-in-out 0s;
